--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       # VSCode拡張機能のキャッシュ用
       - vscode-extensions:/root/.vscode-server/extensions
     tty: true
+    restart: always
     command: /bin/bash
     ports:
       - "3000:3000"  # アプリケーションポート
