--- a/src/tns-projects-history/package.json
+++ b/src/tns-projects-history/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tns-project-history",
+  "name": "tns-projects-history",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,18 +13,20 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "v0": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
